Fixed containers, overlapping and characters

--- a/Module 2/index.css
+++ b/Module 2/index.css
@@ -1804,6 +1804,7 @@
     height: 1103px;
     position: absolute;
     border-radius: 20px;
+    opacity: 0;
   }
    
   .module2-thq-text-elm389 {
